application filler content updated

--- a/app/views/v12/provider/view/3c-manage-applications-shared-multiple.html
+++ b/app/views/v12/provider/view/3c-manage-applications-shared-multiple.html
@@ -106,7 +106,7 @@ Manage vacancy
       name: "Keith Stewart",
       id: "678CFR0",
       status: "shared",
-      link: "",
+      link: "../account/application-employer-reviewed-yes",
       classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
@@ -133,7 +133,7 @@ Manage vacancy
       name: "Judy Ward",
       id: "897DW5T",
       status: "shared",
-      link: "",
+      link: "../account/application-employer-reviewed-no",
       classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "No"
