--- a/app/views/v12/provider/account/application-review.html
+++ b/app/views/v12/provider/account/application-review.html
@@ -55,15 +55,15 @@ Manage apprentices
 
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What are your main strengths?</span>
-        <span>fdfghm</span>
+        <span>XXXXXXXXXX</span>
       </div>
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What skills would you like to improve during this apprenticeship?</span>
-        <span>fgrszfh</span>
+        <span>XXXXXXXXXX</span>
       </div>
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What are your hobbies and interests?</span>
-        <span>erheraherth</span>
+        <span>XXXXXXXXXX</span>
       </div>
     </section>
 
@@ -74,7 +74,7 @@ Manage apprentices
       <h2 class="govuk-heading-l">Education</h2>
 
       <h3 class="govuk-heading-s">Name of most recent school/college</h3>
-      <p>etone</p>
+      <p>XXXXXXXXXX</p>
 
       <h3 class="govuk-heading-s">Years attended</h3>
       <table>
@@ -99,21 +99,21 @@ Manage apprentices
     <section>
       <h2 class="govuk-heading-l">Qualifications</h2>
 
-      <p>I don't have any qualifications</p>
+      <p>XXXXXXXXXX</p>
 
     </section>
 
     <section>
       <h2 class="govuk-heading-l">Work experience</h2>
 
-      <p>I don't have any work experience</p>
+      <p>XXXXXXXXXX</p>
 
     </section>
 
     <section>
       <h2 class="govuk-heading-l">Training courses</h2>
 
-      <p>I have not been on any training courses</p>
+      <p>XXXXXXXXXX</p>
 
 
     </section>
@@ -134,7 +134,7 @@ Manage apprentices
   <h2 class="govuk-heading-l">Additional questions</h2>
 
   <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-  <p>[applicant answer]</p>
+  <p>XXXXXXXXXX</p>
 
   <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
   <p>Yes</p>
