--- a/app/views/v12/provider/view/0-dashboard-reviewed-v2.html
+++ b/app/views/v12/provider/view/0-dashboard-reviewed-v2.html
@@ -199,7 +199,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">11</span>
-              <a class="card-link" href="5a-closed">
+              <a class="card-link" href="#">
                   Closed vacancies
               </a>
             </h3>
@@ -214,10 +214,10 @@ Recruitment - {{serviceName}} - GOV.UK
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">4</span>
               <a class="card-link" href="6-employer-reviewed">
-                  Employer reviewed
+                Employer review
               </a>
             </h3>
-            <p class="govuk-body das-card--description">Vacancies that have applications reviewed by the employer to action.</p>
+            <p class="govuk-body das-card--description">Vacancies with applications that have been reviewed by employers.</p>
           </div>
         </div>
       </div>
