--- a/app/views/v12/provider/view/0-dashboard-reviewed.html
+++ b/app/views/v12/provider/view/0-dashboard-reviewed.html
@@ -219,7 +219,7 @@ Recruitment - {{serviceName}} - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">11</span>
-              <a class="card-link" href="5a-closed">
+              <a class="card-link" href="#">
                   Closed vacancies
               </a>
             </h3>
