--- a/app/views/v12/provider/view/6-employer-reviewed.html
+++ b/app/views/v12/provider/view/6-employer-reviewed.html
@@ -173,7 +173,7 @@ Vacancies
 </div>
 <!-- SEARCH end -->
 
-  <p class="govuk-body"><b>2 vacancies reviewed by employer</b> &nbsp;
+  <p class="govuk-body"><b>2 vacancies with  applications reviewed by employers</b> &nbsp;
     <a href="#">Show all vacancies</a>
   </p>
 
