--- a/app/views/v12/provider/view/8a-multiple-unsuccessful-success.html
+++ b/app/views/v12/provider/view/8a-multiple-unsuccessful-success.html
@@ -24,7 +24,7 @@ Manage vacancy
         <h3 class="govuk-notification-banner__heading">
           Keith Stewart has been offered this job
         </h3>
-        <p>[text]</p>
+        <p>Now let the other applicants know they are unsuccessful.</p>
       </div>
     </div>
   
