--- a/app/views/v12/provider/view/0-dashboard-reviewed-v2.html
+++ b/app/views/v12/provider/view/0-dashboard-reviewed-v2.html
@@ -214,7 +214,7 @@ Recruitment - {{serviceName}} - GOV.UK
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">4</span>
               <a class="card-link" href="6-employer-reviewed">
-                Employer review
+                Employer reviewed applications
               </a>
             </h3>
             <p class="govuk-body das-card--description">Vacancies with applications that have been reviewed by employers.</p>
