--- a/app/views/v12/provider/view/7b-check-unsuccessful.html
+++ b/app/views/v12/provider/view/7b-check-unsuccessful.html
@@ -23,10 +23,7 @@ Manage vacancy
           This will notify <b>Judy Ward</b> to say that they have not been accepted for this apprenticeship.
         </p>
 
-
-        <p class="govuk-body" >
-          Your message to the applicant:
-        </p>
+        <h2 class="govuk-heading-m">Your message to the applicant:</h2>
 
         <div class="govuk-inset-text">
           {{ data['contact-by-unsuccessful'] }}
