word counter corrected

--- a/app/views/v12/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v12/provider/account/application-employer-reviewed-no.html
@@ -217,7 +217,7 @@ Manage apprentices
                   <div id="sign-in-hint" class="govuk-hint">
                     Explain why the application has been unsuccessful, your comments will be sent to the applicant.
                   </div>
-                  <textarea class="govuk-textarea" id="contact-by-unsuccessful" name="contact-by-unsuccessful" type="unsuccessful" rows="5" spellcheck="false" aria-describedby="more-detail-hint"></textarea>
+                  <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="contact-by-unsuccessful" rows="5" aria-describedby="word-count-info"></textarea>                
                 </div>
                 <div id="word-count-info" class="govuk-hint govuk-character-count__message">
                   You can enter up to 200 words
