employer search box text updated

--- a/app/views/v13/employer/email-shared-applications.html
+++ b/app/views/v13/employer/email-shared-applications.html
@@ -24,7 +24,7 @@
 		</p>
 
 		<p>
-			You have 2 applications sent to you by Lifetime Training to review. 
+			You have 2 applications to Entry Level Development Engineer Apprentice sent to you by Lifetime Training to review. 
 		</p>
 
 		<p>
