--- a/app/views/v13/employer/view/2a-new-applications.html
+++ b/app/views/v13/employer/view/2a-new-applications.html
@@ -143,7 +143,7 @@ Adverts
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search by advert title, reference number or employer
+                  Search by advert, reference or applicant
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
