--- a/app/views/v13/employer/view/6-shared.html
+++ b/app/views/v13/employer/view/6-shared.html
@@ -143,7 +143,7 @@ Adverts
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search by advert title, reference number, employer or applicant
+                  Search by advert, reference or applicant
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
@@ -165,7 +165,7 @@ Adverts
 </div>
 <!-- SEARCH end -->
 
-  <p class="govuk-body"><b>2 live adverts</b> &nbsp;
+  <p class="govuk-body"><b>2 adverts with shared applications </b> &nbsp;
     <a href="#">Show all adverts</a>
   </p>
 
