--- a/app/views/v13/employer/view/0-dashboard.html
+++ b/app/views/v13/employer/view/0-dashboard.html
@@ -33,7 +33,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
                   <input type="hidden" name="clientsFilter" value="new">
                   <div class="search-input search-input-with-button">
                     <label class="govuk-label " for="search">
-                      Search by advert title or reference number
+                      Search by advert, reference or applicant
                     </label>
                   <div class="autocomplete__parent_wrapper">
                     <div class="autocomplete__wrapper">
