delete API key content updated

--- a/app/views/v13/provider/api/api-confirm-delete.html
+++ b/app/views/v13/provider/api/api-confirm-delete.html
@@ -15,9 +15,14 @@ Key for API - Apprenticeships - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Are you sure you want to delete this key?</h1>
-      <p class="govuk-body">
+    
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
         Deleting the key will disable the previous key and will stop your API from working until you get a new key.
-      </p>
+      </strong>
+    </div>
 
       <form method="post" action="">
 
