--- a/app/views/v13/provider/view/3c-manage-applications-shortlist.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shortlist.html
@@ -105,7 +105,7 @@ Manage vacancy
   {
     name: "Keith Stewart",
     id: "678CFR0",
-    status: "shortlisted",
+    status: "Interviewing",
     link: "../account/application-employer-reviewed-yes",
     classes: "govuk-tag--yellow",
     date: "13 Oct 2022",
@@ -123,7 +123,7 @@ Manage vacancy
   {
     name: "Susie Noble",
     id: "LL13J9H",
-    status: "shortlisted",
+    status: "Interviewing",
     link: "",
     classes: "govuk-tag--yellow",
     date: "15 Oct 2022",
