--- a/app/views/v13/provider/view/3c-manage-applications-successful.html
+++ b/app/views/v13/provider/view/3c-manage-applications-successful.html
@@ -125,7 +125,7 @@ Manage vacancy
   {
     name: "Susie Noble",
     id: "LL13J9H",
-    status: "shortlisted",
+    status: "Interviewing",
     link: "",
     classes: "govuk-tag--yellow",
     date: "15 Oct 2022",
