--- a/app/views/v13/provider/view/8a-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8a-multiple-unsuccessful.html
@@ -89,7 +89,7 @@ Manage vacancy
   {
     name: "Susie Noble",
     id: "LL13J9H",
-    status: "shortlisted",
+    status: "Interviewing",
     link: "",
     classes: "govuk-tag--yellow",
     date: "15 Oct 2022",
