--- a/app/views/v13/guidance/get-started.html
+++ b/app/views/v13/guidance/get-started.html
@@ -35,6 +35,8 @@ Get started - Apprenticeship services - GOV.UK
       The API key the employer or training provider will send to you is linked to their account and provides additional functionality, so use that one.
       <br><br>
       You can view the API documentation now, using the links at the top of the page. You can read the documentation but will not be able to call the API until the employer or provider gives you an API key.
+      <br><br>
+      You can delete your API keys from within your account. Deleting the key will stop applications using the key from working.
     </p>
     <h2 class="govuk-heading-l" id="working-independently">Using our display adverts API if you are working independently</h2>
     <p class="govuk-body">
@@ -45,6 +47,8 @@ Get started - Apprenticeship services - GOV.UK
       You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account or sign in to get an API key</a> to use the display advert API.
       <br><br>
       You can <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
+      <br><br>
+      You can delete your API keys from within your account. Deleting the key will stop applications using the key from working.
     </p>
     <h2 class="govuk-heading-l">RESTful APIs</h2>
     <p class="govuk-body">
