--- a/app/views/v13/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v13/provider/account/application-employer-reviewed-no.html
@@ -153,7 +153,7 @@ Manage apprentices
     <section>
       <h2 class="govuk-heading-l">Employer response</h2>
 
-      <p>No, the employer does not want to shortlist this applicant.</p>
+      <p>No, the employer does not want to interview this applicant.</p>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
