--- a/app/views/v13/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v13/provider/account/application-employer-reviewed-no.html
@@ -155,6 +155,10 @@ Manage apprentices
 
       <p>No, the employer does not want to interview this applicant.</p>
 
+      {{ govukInsetText({
+        text: "[reason given by employer]"
+      }) }}
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
