--- a/app/views/v13/employer/email-shared-applications.html
+++ b/app/views/v13/employer/email-shared-applications.html
@@ -10,7 +10,7 @@
 <p>
 	To: <br>
 	From: The Apprenticeship service <br>
-	Subject: 
+	Subject: You have new applications shared with you by a training provider
 </p>
 
 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
