employer shared applications updated to tags

--- a/app/views/v13/employer/home.html
+++ b/app/views/v13/employer/home.html
@@ -135,7 +135,7 @@ GOV.UK Prototype Kit
           <div class="govuk-tabs" data-module="govuk-tabs">
   <ul class="govuk-tabs__list" role="tablist">
     <li class="govuk-tabs__list-item govuk-tabs__list-item--selected" role="presentation">
-        <a class="govuk-tabs__tab" href="#past-day" id="tab_past-day" role="tab" aria-controls="past-day" aria-selected="true" tabindex="0">
+        <a class="govuk-tabs__tab" href="#" id="tab_past-day" role="tab" aria-controls="past-day" aria-selected="true" tabindex="0">
           Tasks
         </a>
       </li>
@@ -143,7 +143,7 @@ GOV.UK Prototype Kit
   <section class="govuk-tabs__panel" id="past-day" role="tabpanel" aria-labelledby="tab_past-day">
 
       <p>2 applications shared to review <br>
-        <a href="#">View applications</a>
+        <a href="./view/6b-shared-applications">View applications</a>
       </p>
   </section>
   <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="past-week" role="tabpanel" aria-labelledby="tab_past-week">
