--- a/app/views/v13/employer/account/application-new.html
+++ b/app/views/v13/employer/account/application-new.html
@@ -165,7 +165,7 @@ Manage apprentices
                                 <div class="govuk-form-group">
                                     <label class="govuk-label" for="reason">Feedback</label>
                                     <span class="govuk-hint">Explain why the application has been unsucessful, your comments will be sent to the candidate.</span>
-                                    <textarea class="govuk-textarea" cols="50" rows="6"  id="reason" name="reason" size="12" type="text"></textarea>
+                                    <!-- <textarea class="govuk-textarea" cols="50" rows="6"  id="reason" name="reason" size="12" type="text"></textarea> -->
                                 </div>
                             </div>
                           </div>
