--- a/app/views/v13/guidance/get-started.html
+++ b/app/views/v13/guidance/get-started.html
@@ -16,8 +16,16 @@ Get started - Apprenticeship services - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started</h1>      
-    <h2 class="govuk-heading-l">About the Recruitment and Display adverts APIs</h2>
+    <h2 class="govuk-heading-l">About the Apprenticeship Service APIs</h2>
     <p class="govuk-body">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">Track Apprenticeship Progress API</a>
+      <br>
+      <span class="govuk-caption">Share data on the progress of your apprenticeships</span>
+      <br><br>
+      <a href="#" class="govuk-link govuk-link--no-visited-state">Track Apprenticeship Progress API Sandbox</a>
+      <br>
+      <span class="govuk-caption">Share data on the progress of your apprenticeships</span>
+      <br><br>
       <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>
       <br>
       <span class="govuk-caption">Use this product to create and submit adverts.</span>
@@ -28,28 +36,30 @@ Get started - Apprenticeship services - GOV.UK
       <span class="govuk-caption">Use this product to retrieve adverts.</span>
       <br><br>
     </p>
+
+ <!-- SECTION 2    -->
     <h2 class="govuk-heading-l" id="working-together">Using our APIs if you are working with an employer or training provider</h2>
     <p class="govuk-body">
-      You need the employer or provider to give you an API key. They can do this for the Recruitment API and the Display adverts API using their Apprenticeship service account.
+      If you’re working with an employer or training provider, they can get you an API key using their Apprenticeship service account.
       <br><br>
       The API key the employer or training provider will send to you is linked to their account and provides additional functionality, so use that one.
       <br><br>
       You can view the API documentation now, using the links at the top of the page. You can read the documentation but will not be able to call the API until the employer or provider gives you an API key.
       <br><br>
-      You can delete your API keys from within your account. Deleting the key will stop applications using the key from working.
+      The training provider or employer can delete the API keys from within their account. Deleting the key will stop applications using the key from working.
     </p>
-    <h2 class="govuk-heading-l" id="working-independently">Using our display adverts API if you are working independently</h2>
+    <h2 class="govuk-heading-l" id="working-independently">Using our Display adverts API if you are working independently</h2>
     <p class="govuk-body">
-      If you are not working with an employer or training provider and don’t have an apprenticeship service account, you can use the Display adverts API to show adverts from Find apprenticeship training on any website.
+      If you are not working with a training provider or employer, you can use the Display adverts API. You’ll need someone with technical knowledge to connect your system with the API.      
       <br><br>
-      If you are not a software developer, you'll need someone with technical knowledge to connect your system with the API.
-      <br><br>
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account or sign in to get an API key</a> to use the display advert API.
-      <br><br>
-      You can <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
-      <br><br>
-      You can delete your API keys from within your account. Deleting the key will stop applications using the key from working.
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account or log in</a>to access the Display adverts API key.
     </p>
+
+    <!-- <button class="govuk-button" data-module="govuk-button">
+      Sign in
+    </button> -->
+
+<!-- SECTION 3 -->
     <h2 class="govuk-heading-l">RESTful APIs</h2>
     <p class="govuk-body">
       Apprenticeship service APIs are RESTful. In a RESTful style of API, data resources are given unique URLs and are manipulated through standard HTTP verbs such as:
